--- a/Assignment/nbproject/project.properties
+++ b/Assignment/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.sqljdbc4-2.0.jar=C:\\Users\\Admin\\Desktop\\sqljdbc4-2.0.jar
+file.reference.sqljdbc42-Copy.jar=C:\\Users\\Windows\\Downloads\\sqljdbc42-Copy.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,8 +38,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4-2.0.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.sqljdbc42-Copy.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -66,7 +66,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
