--- a/Assignment/nbproject/project.properties
+++ b/Assignment/nbproject/project.properties
@@ -28,6 +28,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\Admin\\Desktop\\AccessGoogle-lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=C:\\Users\\Admin\\Desktop\\AccessGoogle-lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\Admin\\Desktop\\AccessGoogle-lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=C:\\Users\\Admin\\Desktop\\AccessGoogle-lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=C:\\Users\\Admin\\Desktop\\AccessGoogle-lib\\httpcore-4.4.9.jar
 file.reference.sqljdbc42-Copy.jar=C:\\Users\\Windows\\Downloads\\sqljdbc42-Copy.jar
 includes=**
 j2ee.compile.on.save=true
@@ -39,7 +44,12 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42-Copy.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.5.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.httpclient-4.5.5.jar}:\
+    ${file.reference.httpcore-4.4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
